--- a/GrandTravel/ViewController3.xib
+++ b/GrandTravel/ViewController3.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -37,7 +35,6 @@
                             <constraints>
                                 <constraint firstItem="c5P-8L-kKd" firstAttribute="leading" secondItem="Veh-2S-vcI" secondAttribute="leading" id="23O-2t-bRL"/>
                                 <constraint firstAttribute="trailing" secondItem="c5P-8L-kKd" secondAttribute="trailing" id="ZTh-EM-76C"/>
-                                <constraint firstItem="c5P-8L-kKd" firstAttribute="top" secondItem="Veh-2S-vcI" secondAttribute="top" constant="16" id="mPl-My-nKt"/>
                             </constraints>
                         </stackView>
                     </subviews>
